Fix overlaping years

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 :root {
   --yangColor: #d8c21e;
   --yinColor: #111111;
+  --background: rgba(0, 0, 0, .3);
 }
 
 .canvas {
@@ -50,7 +51,7 @@
   width: 28vmin;
   height: 28vmin;
   border: 4px solid var(--yangColor);
-  box-shadow: 15px 15px 30px rgba(0, 0, 0, .3);
+  box-shadow: 15px 15px 30px var(--background);
 }
 
 .box::after {
@@ -64,7 +65,7 @@
 
 .digit {
   color: var(--yangColor);
-  background-color: var(--yinColor);
+  background-color: transparent;
   display: block;
   height: 100%;
   width: 100%;
@@ -72,6 +73,7 @@
   place-items: center;
   font-size: 5em;
   font-weight: 600; 
+  z-index: 1;
 }
 
 .text {
